# Coffeed

./: .gitmodules  README.md  wp.code-workspace
coffeed-client/: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  protractor.conf.js  tsconfig.json  webpack.config.js
coffeed-client/aurelia_project/: aurelia.json
coffeed-client/src/: App.tsx  App.vue  app.html  app.ts  index.tsx  router.ts
coffeed-client/src/assets/: coffee.afdesign
coffeed-client/src/assets/fonts/: icomoon.eot
coffeed-client/src/classes/: coffee.ts  configuration.ts  graphClient.ts  route.ts
coffeed-client/src/components/: HelloWorld.vue
coffeed-client/src/components/CoffeeCard/: CoffeeCard.vue
coffeed-client/src/components/CoffeeLoader/: CoffeeLoader.vue
coffeed-client/src/components/coffee-card/: coffee-card.html  coffee-card.scss  coffee-card.ts
coffeed-client/src/router/: router.tsx
coffeed-client/src/store/: store.tsx
coffeed-client/src/style/: dependencies.scss  fonticon.scss  index.scss  variables.scss
coffeed-client/src/views/: Home.vue
coffeed-server/: .gitignore  Cargo.toml  datamodel.graphql  docker-compose.yml  package.json  pnpm-lock.yaml  prisma.yml  tsconfig.json
coffeed-server-static/: .eslintrc.json  package.json  pnpm-lock.yaml
coffeed-server/.docker/: fastapi.Dockerfile
coffeed-server/app/: main.py
coffeed-server/src/: index.ts  main.rs  schema.graphql  schema.rs
coffeed-server/src/models/: coffee.rs  mod.rs
coffeed-server/src/models/Coffee/: coffee.graphql  coffee.ts
coffeed-server/src/routes/: mod.rs  routes.rs
(+18 files in other folders)
